# routes/item.js
@@ -36,9 +36,17 @@ router.post("/addItem", upload.array("images", 5), controller.createItem);
 // // POST /api-server/item/pickRegion
 // router.post("/pickRegion", authenticateToken, controller.setRegion);
 
-// /** 상품 찜하기 */
-// // POST /api-server/item/save
-// router.post("/save", authenticateToken, controller.addToFavorites);
+/** 상품 찜하기 */
+// POST /api-server/item/favorites
+router.post("/favorites", controller.addToFavorites);
+
+// /** 상품 찜 취소 */
+// // DELETE /api-server/item/favorites/:itemId
+// router.delete("/favorites/:itemId", authenticateToken, controller.removeFromFavorites);
+
+// /** 찜한 상품 목록 조회 */
+// // GET /api-server/item/favorites
+// router.get("/favorites", authenticateToken, controller.getFavoriteItems);
 
 /** 상품 이미지 업로드 (여러 개 가능) */
 // POST /api-server/item/upload
